[project]
name = "st"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "FedericoCantarelli", email = "fede.cantarelli98@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
st = "st:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
