[project]
name = "st"
version = "0.1.0"
description = "A stupid CLI to easily create themes for Structurizr."
readme = "README.md"
authors = [
    { name = "Federico Cantarelli", email = "fede.cantarelli98@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.2",
]

[project.scripts]
st = "st:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"
