[project]
name = "st"
version = "0.1.0"
description = "A stupid CLI to easily create themes for Structurizr."
readme = "README.md"
authors = [
    { name = "Federico Cantarelli", email = "fede.cantarelli98@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.2,<9.0.0",
]

[project.scripts]
st = "st:main"

[build-system]
requires = ["uv_build>=0.11.28,<0.12.0"]
build-backend = "uv_build"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
